
2002-08-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/tchar.h: Ansi-fy another comment.

2002-08-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/tchar.h: Ansi-fy comment.

2002-08-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* test_headers.c : New file.
	* Makefile.in (test_headers): New target, using it,
	(SRCDIST_FILES): Distribute it.

2002-08-14  Earnie Boyd  <earnie@users.sf.net>

	* include/unistd.h: Add include of process.h.

2002-08-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdio.h (_fcloseall): Add prototype.

2002-07-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/tchar.h (_tfdopen): Correct typo.

2002-07-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* moldname.def.in (chgsign,scalb,finite,fpclass,logb,
	nextafter): Add non-underscored stubs.
	* moldname-msvcrt.def: Regenerate.
	* moldname-crtdll.def: Regenerate.
	* mingwex/math: New directory.
	* mingwex/rint.c: Move to mingwex/math.
	* mingwex/rintf.c: Ditto.
	* mingwex/rintl.c: Ditto.
	* mingwex/round.c: Ditto.
	* mingwex/roundf.c: Ditto.
	* mingwex/roundl.c: Ditto.
	* mingwex/rint.c: Ditto.
	* mingwex/rintf.c: Ditto.
	* mingwex/rintl.c: Ditto.
	* mingwex/trunc.c: Ditto.
	* mingwex/truncf.c: Ditto.
	* mingwex/truncl.c: Ditto.
	* mingwex/signbit.c: Ditto.
	* mingwex/signbitf.c: Ditto.
	* mingwex/signbitl.c: Ditto.
	* mingwex/copysignl.S: Ditto.
	* mingwex/fdim.c: Ditto.
	* mingwex/fdimf.c: Ditto.
	* mingwex/fdiml.c: Ditto.
	* mingwex/fmin.c: Ditto.
	* mingwex/fminf.c: Ditto.
	* mingwex/fminl.c: Ditto.
	* mingwex/fmax.c: Ditto.
	* mingwex/fmaxf.c: Ditto.
	* mingwex/fmaxl.c: Ditto.
	* mingwex/fma.c: Ditto.
	* mingwex/fmaf.c: Ditto.
	* mingwex/fmal.c: Ditto.
	* mingwex/fpclassify.c: Ditto.
	* mingwex/fpclassifyl.c: Ditto.
	* mingwex/fpclassifyl.c: Ditto.
	* mingwex/isnan.c: Ditto.
	* mingwex/isnanf.c: Ditto.
	* mingwex/isnanl.c: Ditto.
	* mingwex/fucom.c: Ditto.