@@ -18,6 +18,11 @@
 	* Makefile.in (test_headers): New target, using it,
 	(SRCDIST_FILES): Distribute it.
 
+2002-08-20  Earnie Boyd  <earnie@users.sf.net>
+
+	* include/_mingw.h: Increment version to 2.2.
+	Makefile.in: Ditto.
+
 2002-08-14  Earnie Boyd  <earnie@users.sf.net>
 
 	* include/unistd.h: Add include of process.h.
